# netcdf_explorer

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
scripts/: sync.sh
src/netcdf2html/api/: colours.py  data_encoder.py  data_image.js  html_view.js  index.css  index.js  layers.py  netcdf2html_converter.py
src/netcdf2html/cli/: apply_labels.py  example_layers.json5  generate_html.py  main.py  serve_html.py  test_duplicates.py
src/netcdf2html/fragments/: image.py  table.py
src/netcdf2html/htmlfive/: html5_common.py
src/netcdf2html/misc/: cmap.js  cmap.py
src/netcdf2html/misc/cmaps/: Accent.json  Accent_r.json  Blues.json  BrBG.json  CMRmap.json  Dark2.json  Dark2_r.json  Greys.json  OrRd.json  Paired.json  Paired_r.json  Pastel1.json  Pastel1_r.json  Pastel2.json  Pastel2_r.json  PuOr.json  RdBu.json  RdGy.json  Reds.json  Set1.json  Set1_r.json  Set2.json  Set2_r.json  Set3.json  Set3_r.json  brg.json  cividis.json  cividis_r.json  cool.json  coolwarm.json  copper.json  cubehelix.json  gist_heat.json  gist_ncar.json  gist_stern.json  gnuplot.json  gray.json  hot.json  inferno.json  inferno_r.json  (+22 more)
src/netcdf_explorer/api/: bigplot.py  cmap.js  colours.py  data_encoder.py  data_image.js  expr_parser.py  histogram.py  html_generator.py  html_view.js  index.css  layers.py  leaflet_map.js  terrain_view.js  timeseries_chart.js
src/netcdf_explorer/cli/: apply_labels.py  bigplot.py  combine_datafiles.py  example_layers.json5  generate_html.py  serve_html.py  test_duplicates.py  thumbnail.py
src/netcdf_explorer/dependencies/: babylonTerrain.js
src/netcdf_explorer/fragments/: image.py  legend.py  select.py  table.py  utils.py
src/netcdf_explorer/htmlfive/: html5_builder.py  html5_exporter.py
src/netcdf_explorer/misc/: cmap.py  list_cmaps.py
src/netcdf_explorer/misc/cmaps/: Accent.json  BuGn.json  BuPu.json  GnBu.json  Greens.json  (+40 more)
test/: area_293_min.json  example_layers.json  example_layers.json5  example_layers.yaml  test_install.sh  unittests.py
test/netcdf_explorer_tests/: example_layers.json  example_layers.yaml  unittests.py
