[metadata]
name = netcdf2html
version = 0.1.0
author = Niall McCarroll / national Centre for Earth Observation
author_email = n.f.mccarroll@reading.ac.uk
description = Convert gridded data from netcdf4 files into HTML files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/surftemp/netcdf2html
project_urls =
    Bug Tracker =  https://github.com/surftemp/netcdf2html/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    generate_html = netcdf2html.cli.generate_html:main
    apply_labels = netcdf2html.cli.apply_labels:main
    serve_html = netcdf2html.cli.serve_html:main

[options.packages.find]
where = src

