[metadata]
name = netcdf_explorer
version = 0.2.0
author = Niall McCarroll / National Centre for Earth Observation
author_email = n.f.mccarroll@reading.ac.uk
description = Tools for exploring gridded spatiotemporal data stored in netcdf4 files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/surftemp/netcdf_explorer
project_urls =
    Bug Tracker =  https://github.com/surftemp/netcdf_explorer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.entry_points]
console_scripts =
    generate_html = netcdf_explorer.cli.generate_html:main
    apply_labels = netcdf_explorer.cli.apply_labels:main
    serve_html = netcdf_explorer.cli.serve_html:main
    bigplot = netcdf_explorer.cli.bigplot:main
    test_duplicates = netcdf_explorer.cli.test_duplicates:main

[options.packages.find]
where = src

